<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical Centre App</string>
    <string name="action_settings">Settings</string>
    <string name="book_title_label">First Name</string>
    <string name="book_title_hint">First Name</string>
    <string name="book_author_label">Last Name</string>
    <string name="book_firstname_hint">Last Name</string>
    <string name="book_lastname_hint">Phone Number</string>
    <string name="book_year_label">Phone Number</string>
    <string name="book_year_hint">Year published</string>
    <string name="book_price_label">Price</string>
    <string name="book_price_hint">Price</string>
    <string name="book_isbn_label">Email</string>
    <string name="book_isbn_hint">Email</string>
    <string name="book_publisher_label">Department</string>
    <string name="book_publisher_hint">Department</string>

    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_activity_title">Doctor Details</string>

</resources>
