<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medcentre.app.DoctorFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title_label" />

    <EditText
        android:id="@+id/doctor_firstName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title_hint"
        android:paddingBottom="@dimen/activity_field_margin"
        android:inputType="none"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin"
        android:text="@string/book_author_label" />

    <EditText
        android:id="@+id/doctor_lastName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_firstname_hint"
        android:paddingBottom="@dimen/activity_field_margin"
        android:inputType="none"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin"
        android:text="@string/book_year_label" />

    <EditText
        android:id="@+id/doctor_phoneNumber_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_lastname_hint"
        android:paddingBottom="@dimen/activity_field_margin"
        android:inputType="none"
        android:singleLine="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin"
        android:text="@string/book_isbn_label" />

    <EditText
        android:id="@+id/doctor_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_isbn_hint"
        android:paddingBottom="@dimen/activity_field_margin"
        android:inputType="none"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin"
        android:text="@string/book_publisher_label" />

    <EditText
        android:id="@+id/doctor_area_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_publisher_hint"
        android:paddingBottom="@dimen/activity_field_margin"
        android:inputType="none"
        android:singleLine="true" />



</LinearLayout>

